--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,40 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">manKeith</h2>
+        <h2 class="card-title">man</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: manid22</li>
-            <li class="list-group-item">Email: <a href="mailto:man@gmail.com">man@gmail.com</a></li>
-            <li class="list-group-item">Office number: manoffice22</li>
+            <li class="list-group-item">ID: </li>
+            <li class="list-group-item">Email: <a href="mailto:"></a></li>
+            <li class="list-group-item">Office number: </li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">engkeith</h2>
+        <h2 class="card-title"></h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: engid22</li>
-            <li class="list-group-item">Email: <a href="mailto:eng@gmail.com">eng@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/bowdwin" target="_blank" rel="noopener noreferrer">bowdwin</a></li>
+            <li class="list-group-item">ID: </li>
+            <li class="list-group-item">Email: <a href="mailto:"></a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/" target="_blank" rel="noopener noreferrer"></a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">intKeith</h2>
+        <h2 class="card-title"></h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: internid22</li>
-            <li class="list-group-item">Email: <a href="mailto:intern@gmail.com">intern@gmail.com</a></li>
-            <li class="list-group-item">School: bentley</li>
+            <li class="list-group-item">ID: </li>
+            <li class="list-group-item">Email: <a href="mailto:"></a></li>
+            <li class="list-group-item">School: </li>
         </ul>
     </div>
 </div>
